# bactSim

./: CMakeLists.txt  README.md
CMakeModules/: FindHDF5Cpp.cmake
src/: BacteriaManager.cpp  BacteriaManager.h  CMakeLists.txt  Environment.cpp  Environment.h  create.cpp  main.cpp  simulate.cpp
src/BacterialPopulations/: BacterialPopulation.cpp  BacterialPopulation.h  ExamplePopulation.cpp  ExamplePopulation.h  Kollmann2005Population.cpp  Kollmann2005Population.h  Matthaeus2009Population.cpp  Matthaeus2009Population.h  SimplePopulation.cpp  SimplePopulation.h
src/Environments/: BoundaryCondition.cpp  BoundaryCondition.h  ConstantEnvironment.h  Environment.cpp  Environment.h  Environment1D.cpp  Environment1D.h  Environment2D.cpp  Environment2D.h  Environment3D.cpp  Environment3D.h  EnvironmentBase.cpp  EnvironmentBase.h
src/Examples/: CMakeLists.txt  Example1.cpp  Example2.cpp  Example3.cpp  Example4.cpp  Example5.cpp
src/General/: ArrayFireHelper.cpp  ArrayFireHelper.h  CoordinateIndexer.cpp  CoordinateIndexer.h  GpuHelper.cpp  GpuHelper.h  Helper.cpp  Helper.h  Ligand.cpp  Ligand.h  Ligand.hpp  Ligands.hpp  ScalableCoordinateIndexer.cpp  ScalableCoordinateIndexer.h  StorageHelper.cpp  StorageHelper.h  Types.h
src/Models/: Model2D.cpp  Model2D.h
src/Solvers/: ForwardEulerSolver.cpp  ForwardEulerSolver.h  RungeKuttaSolver.cpp  RungeKuttaSolver.h  Solver.cpp  Solver.h
